Fix invalid Docker tag format for SHA tags
Fixed issue where SHA tags were creating invalid Docker tags starting with
hyphens (e.g., -65c0bb5) during release builds. Changed prefix from
{{branch}}- to sha- and limited to main branch builds only.

This fixes the v0.1.0 release build failure.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -50,8 +50,8 @@ jobs:
             type=ref,event=branch
             # PR number
             type=ref,event=pr
-            # Git commit SHA (short)
-            type=sha,prefix={{branch}}-,format=short
+            # Git commit SHA (short) - only for main branch
+            type=sha,prefix=sha-,format=short,enable={{is_default_branch}}
             # Latest tag for main branch
             type=raw,value=latest,enable={{is_default_branch}}
             # Date tag for main branch (YYYYMMDD)
